--- a/manual/common.css
+++ b/manual/common.css
@@ -1,4 +1,4 @@
-body { background-color : ffffee; font-family:arial narrow; margin:.5in }
+body { background-color : #FFE; font-family:arial narrow; margin:.5in }
 pre { margin-left : 3em; }
 dl { margin-left: 2em; }
 code { font-family:courier new}
